--- a/index.html
+++ b/index.html
@@ -2,54 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Sofian Mourabit's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"></head>
+  <script src="https://use.fontawesome.com/d9709cee7f.js"></script>
   <body>
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
+          <li class="name">Sofian Mourabit</li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/me.png" alt="Picture of Sofian Mourabit" class="profile-image">
+      <h1 class="tag name">
+        Hello, I’m Sofian.
+      </h1>
+      <p class="tag location">My home is Ghent, Belgium.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+        <h2><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Background</h2>
+        <p>I’m a Front end web developer who is pasionate about the web. I love travelling and I'm currently on a around the world trip with my girlfriend. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>Two things I do for relaxation are running and cooking and I am a life-long learner who's always interested in expanding my skill set.</p>
+      </div>
 
       <div class="card">
-        <h2>Goals</h2>
+        <h2><i class="fa fa-telegram fa-lg" aria-hidden="true"></i> Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>React</li>
+          <li>Angular JS</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+        <p>I’d like to work for a creative web agancie helping clients create an impressive online presence.</p>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/MourabitSofian" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/sofian-mourabit/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/SofianMourabit" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright &copy; 2017, Sofian Mourabit</p>
     </footer>
   </body>
   </html>
