Extra credit: - [x] Edit the styling of the profile photo’s CSS properties. Pick at least one of the following properties to change: border, border-radius, transition

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Sofian Mourabit</li>
+          <li class="name"><a href="index.html">Sofian Mourabit</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
@@ -40,7 +40,9 @@
           <li>CSS</li>
           <li>JavaScript</li>
           <li>React</li>
-          <li>Angular JS</li>
+          <li>AngularJS</li>
+          <li>Vue.JS</li>
+          <li>MongoDB</li>
         </ul>
         <p>I’d like to work for a creative web agancie helping clients create an impressive online presence.</p>
       </div>
