Extra credit: Add more text to the page such as a list of your hobbies.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="card">
         <h2><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Background</h2>
         <p>I’m a Front end web developer who is pasionate about the web. I love travelling and I'm currently on a around the world trip with my girlfriend. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>Two things I do for relaxation are running and cooking and I am a life-long learner who's always interested in expanding my skill set.</p>
+        <p>I belive that anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.</p>
       </div>
 
       <div class="card">
@@ -45,6 +45,15 @@
           <li>MongoDB</li>
         </ul>
         <p>I’d like to work for a creative web agancie helping clients create an impressive online presence.</p>
+      </div>
+      <div class="card">
+        <h2><i class="fa fa-play-circle fa-lg" aria-hidden="true"></i></i> Hobbies</h2>
+        <p>Everyone should be able to do one card trick, tell two jokes, and recite three poems, in case they are ever trapped in an elevator. When I'm not coding I'm probably doing one of these things.</p>
+        <ul class="hobbies">
+          <li><i class="fa fa-steam" aria-hidden="true"></i></i> Gaming</li>
+          <li><i class="fa fa-television" aria-hidden="true"></i> Watching movies</li>
+          <li><i class="fa fa-map-marker" aria-hidden="true"></i> Travelling</li>
+        </ul>
       </div>
 
     </main>
