Extra credit:- [x] Add more photos and imagery to the page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </ul>
         <p>I’d like to work for a creative web agancie helping clients create an impressive online presence.</p>
       </div>
+
       <div class="card">
         <h2><i class="fa fa-play-circle fa-lg" aria-hidden="true"></i></i> Hobbies</h2>
         <p>Everyone should be able to do one card trick, tell two jokes, and recite three poems, in case they are ever trapped in an elevator. When I'm not coding I'm probably doing one of these things.</p>
@@ -55,8 +56,53 @@
           <li><i class="fa fa-map-marker" aria-hidden="true"></i> Travelling</li>
         </ul>
       </div>
-
     </main>
+          <div class="polaroids-gallery">
+            <h2><i class="fa fa-map-o fa-lg" aria-hidden="true"></i><br><br> Places I've been</h2>
+            <ul class="polaroids flex">
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31403842283/in/album-72157675171578044/" title="South-Afrika">
+                    <img src="https://c1.staticflickr.com/1/661/31403842283_98a7d94a69_k.jpg" alt="South-Afrika">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32065797402/in/album-72157677263382591/" title="Indonesia">
+                    <img src="https://c1.staticflickr.com/1/412/32065797402_67d8741777_k.jpg" alt="Indonesia">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31404933043/in/album-72157675174364474/" title="Thailand">
+                    <img src="https://c1.staticflickr.com/1/750/31404933043_b80e985a48_k.jpg" alt="Thailand">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32213712015/in/album-72157677012287252/" title="Singapore">
+                    <img src="https://c1.staticflickr.com/1/300/32213712015_5a01848ef7_k.jpg" alt="Singapore">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32174736646/in/album-72157675169249334/" title="Vietnam">
+                    <img src="https://c1.staticflickr.com/1/301/32174736646_ba491e1a6a_k.jpg" alt="Vietnam">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31401280233/in/album-72157677495265750/" title="Laos">
+                    <img src="https://c1.staticflickr.com/1/552/31401280233_73f0a7b5ae_k.jpg" alt="Laos">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31370319114/in/album-72157678953077025/" title="Cambodia">
+                    <img src="https://c1.staticflickr.com/1/426/31370319114_9a5708787b_k.jpg" alt="Cambodia">
+                  </a>
+              </li>
+              <li>
+                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/33007699376/in/dateposted-public/" title="Australia">
+                    <img src="https://c1.staticflickr.com/3/2717/33007699376_c2f4d2c59e_h.jpg" alt="Australia">
+                  </a>
+                  <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+              </li>
+            </ul>
+          </div>
     <footer>
       <ul>
         <li><a href="https://twitter.com/MourabitSofian" class="social twitter">Twitter</a></li>
