Extra credit: Create additional pages to expand on this online profile.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li class="name"><a href="index.html">Sofian Mourabit</a></li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -58,7 +58,7 @@
       </div>
     </main>
           <div class="polaroids-gallery">
-            <h2><i class="fa fa-map-o fa-lg" aria-hidden="true"></i><br><br> Places I've been</h2>
+            <h2><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i> TRAVEL</h2>
             <ul class="polaroids flex">
               <li>
                   <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31403842283/in/album-72157675171578044/" title="South-Afrika">
