--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
   <title>Sofian Mourabit's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <script src="https://use.fontawesome.com/d9709cee7f.js"></script>
+</head>
   <body>
 
     <div class="main-nav">
