--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       </div>
 
       <div class="card">
-        <h2><i class="fa fa-play-circle fa-lg" aria-hidden="true"></i></i> Hobbies</h2>
+        <h2><i class="fa fa-play-circle fa-lg" aria-hidden="true"></i> Hobbies</h2>
         <p>Everyone should be able to do one card trick, tell two jokes, and recite three poems, in case they are ever trapped in an elevator. When I'm not coding I'm probably doing one of these things.</p>
         <ul class="hobbies">
-          <li><i class="fa fa-steam" aria-hidden="true"></i></i> Gaming</li>
+          <li><i class="fa fa-steam" aria-hidden="true"></i> Gaming</li>
           <li><i class="fa fa-television" aria-hidden="true"></i> Watching movies</li>
           <li><i class="fa fa-map-marker" aria-hidden="true"></i> Travelling</li>
         </ul>
