Adding images to project folder directly

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name"><a href="index.html">Sofian Mourabit</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/me.png" alt="Picture of Sofian Mourabit" class="profile-image">
@@ -62,8 +62,8 @@
             <h2><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i> TRAVEL</h2>
             <ul class="polaroids flex">
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31403842283/in/album-72157675171578044/" title="South-Afrika">
-                    <img src="https://c1.staticflickr.com/1/661/31403842283_98a7d94a69_k.jpg" alt="South-Afrika">
+                  <a href="https://flic.kr/p/PR3UdB" title="South-Afrika">
+                    <img src="images/south-afrika" alt="South-Afrika">
                   </a>
               </li>
               <li>
