Adding images to project folder directly

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <ul class="polaroids flex">
               <li>
                   <a href="https://flic.kr/p/PR3UdB" title="South-Afrika">
-                    <img src="images/south-afrika" alt="South-Afrika">
+                    <img src="images/south-afrika.jpg" alt="South-Afrika">
                   </a>
               </li>
               <li>
