--- a/index.html
+++ b/index.html
@@ -67,40 +67,39 @@
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32065797402/in/album-72157677263382591/" title="Indonesia">
-                    <img src="https://c1.staticflickr.com/1/412/32065797402_67d8741777_k.jpg" alt="Indonesia">
+                  <a href="https://flic.kr/p/QRxApU" title="Indonesia">
+                    <img src="images/indonesia.jpg" alt="Indonesia">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31404933043/in/album-72157675174364474/" title="Thailand">
-                    <img src="https://c1.staticflickr.com/1/750/31404933043_b80e985a48_k.jpg" alt="Thailand">
+                  <a href="https://flic.kr/p/PR9usP" title="Thailand">
+                    <img src="images/thailand.jpg" alt="Thailand">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32213712015/in/album-72157677012287252/" title="Singapore">
-                    <img src="https://c1.staticflickr.com/1/300/32213712015_5a01848ef7_k.jpg" alt="Singapore">
+                  <ahref="https://flic.kr/p/R5BGgR" title="Singapore">
+                    <img src="images/singapore.jpg" alt="Singapore">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/32174736646/in/album-72157675169249334/" title="Vietnam">
-                    <img src="https://c1.staticflickr.com/1/301/32174736646_ba491e1a6a_k.jpg" alt="Vietnam">
+                  <a href="https://flic.kr/p/R2aWfJ" title="Vietnam">
+                    <img src="images/vietnam.jpg" alt="Vietnam">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31401280233/in/album-72157677495265750/" title="Laos">
-                    <img src="https://c1.staticflickr.com/1/552/31401280233_73f0a7b5ae_k.jpg" alt="Laos">
+                  <a href="https://flic.kr/p/PQPLBk" title="Laos">
+                    <img src="images/laos.jpg" alt="Laos">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/31370319114/in/album-72157678953077025/" title="Cambodia">
-                    <img src="https://c1.staticflickr.com/1/426/31370319114_9a5708787b_k.jpg" alt="Cambodia">
+                  <a href="https://flic.kr/p/PN65WW" title="Cambodia">
+                    <img src="images/cambodia.jpg" alt="Cambodia">
                   </a>
               </li>
               <li>
-                  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/138148575@N04/33007699376/in/dateposted-public/" title="Australia">
-                    <img src="https://c1.staticflickr.com/3/2717/33007699376_c2f4d2c59e_h.jpg" alt="Australia">
+                  <a href="https://flic.kr/p/ShM647" title="Australia">
+                    <img src="images/australia.jpg" alt="Australia">
                   </a>
-                  <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
               </li>
             </ul>
           </div>
