--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="card">
         <h2><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Background</h2>
         <p>I’m a Front end web developer who is pasionate about the web. I love travelling and I'm currently on a around the world trip with my girlfriend. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I belive that anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.</p>
+        <p>I believe that anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.</p>
       </div>
 
       <div class="card">
